# apika-os

./: .gitignore  Cargo.toml  default.nix  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
grub/: boot.S  grub.cfg  linker.ld
src/: lib.rs
src/asm/: in_byte.rs  interrupts.rs  mod.rs  out_byte.rs
src/drivers/: mod.rs
src/drivers/clock/: interval.rs  mod.rs
src/drivers/keyboard/: mod.rs
src/drivers/screen/: color.rs  mod.rs  style.rs
src/drivers/screen/primitive/: line.rs  mod.rs  pos.rs  rect.rs
src/games/: mod.rs
src/games/kernel_dash/: map.rs  mod.rs  player.rs
src/games/kernel_dash/map/: _empty  macro.rs  main.rs
